frontend/test/should_fail/visit_001.grg
// visitor ID must be int
test visitTest(var b:boolean)
{
    n:Node;
    if { visited(n, b); }
}
